@@ -1,3 +1,6 @@
+* Tue Oct 12 2010 Andrew McNab <Andrew.McNab@cern.ch>
+- Cert serial number now represented as a string
+  rather than an int
 * Wed Sep 1 2010 Andrew McNab <Andrew.McNab@cern.ch>
 - Support hashes other than MD5 for VOMS ACs to
   address Bug #72185
